# intake-pattern-catalog

./: .flake8  .gitignore  .mypy.ini  .pip.conf  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  Makefile.venv.mk  README.md  bitbucket-pipelines.yml  build.sh  dev-requirements.txt  next_version.py  push_docker_image_to_jfrog.sh  pyproject.toml  requirements.txt  setup.py
.github/: python-package.yml
.github/workflows/: python-package.yml  testpypi-release.yml
conda-recipe/: meta.yaml
intake_pattern_catalog/: __init__.py  catalog.py
src/intake_pattern_catalog/: __init__.py  _version.py  catalog.py
src/intake_pattern_catalog/tests/: conftest.py  test.yaml  test_pattern_catalog.py
src/intake_patterncatalog/: README.md  __init__.py  catalog.py
src/intake_patterncatalog/tests/: test.yaml  test_pattern_catalog.py
src/intake_patterncatalog/tests/data/: 3.csv
tests/: conftest.py  test.yaml  test_pattern_catalog.py
