[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "intake-pattern-catalog"
description = "Intake plugin for specifying a file-path pattern which can represent a number of different entries"
authors = [{name = "Tim Hopper", email = "tim.hopper@dtn.com"}]
dynamic = ["version"]

[project.scripts]
pattern_cat = "intake_pattern_catalog:PatternCatalog"
pattern_cat_transform = "intake_pattern_catalog:PatternCatalogTransform"

[tool.isort]
profile = "black"
line_length = 88
skip = ["./.venv", "./direnv", ".env"]

[tool.cruft]
skip = ["tests", ".git", ".mypy_cache", ".venv", ".direnv", ".env"]

[tool.black]
exclude = '''
(
  /(
      \.vscode
    | \.git
    | \.pytest_cache
    | \.mypy_cache
    | \.venv
    | \.env
    | \.direnv
  )/
)
'''
include = '\.pyi?$'
line-length = 88

[tool.mypy]
files = [
  "src/**/*.py",
]
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true

[tool.pytest.ini_options]
testpaths = ["src/intake_pattern_catalog/tests"]

