[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "intake-pattern-catalog"
description = "Intake plugin for specifying a file-path pattern which can represent a number of different entries"
authors = [{name = "Tim Hopper", email = "tim.hopper@dtn.com"}]
dynamic = ["dependencies", "readme", "version"]

[project.urls]
repository = "https://github.com/DTN-Public/intake-pattern-catalog"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "intake_pattern_catalog.__version__"}

[project.entry-points."intake.drivers"]
pattern_cat = "intake_pattern_catalog:PatternCatalog"
pattern_cat_transform = "intake_pattern_catalog:PatternCatalogTransform"

[tool.black]
exclude = '''
(
  /(
      \.vscode
    | \.git
    | \.pytest_cache
    | \.mypy_cache
    | \.venv
    | \.env
    | \.direnv
  )/
)
'''
include = '\.pyi?$'
line-length = 88

[tool.mypy]
files = [
  "src/**/*.py",
]
follow_imports = "silent"
ignore_missing_imports = true
scripts_are_modules = true

[tool.ruff]
select = [
    # Pyflakes
    "E",
    # pycodestyle
    "F",
    # isort
    "I001",
]
